Fix set z-index to product-tab

--- a/styles/layouts/_product-tab.scss
+++ b/styles/layouts/_product-tab.scss
@@ -1,6 +1,7 @@
 .product-tab {
   $grid-margin: $sm-margin + $gutter / 2;
 
+  z-index: $product-tab-level;
   width: 100%;
   height: 40px;
   background-color: $white;
